# MCP-AI-Chat-Interface

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/mcp_chat/: __init__.py  main.py  mcp_client.py  mcp_server.py
src/mcp_chat/core/: chat.py  cli.py  cli_chat.py  tools.py
